metadata/unpackaged/objects/Line_Items__c.object
<CustomObject>
    <fields>
        <fullName>Invoice_Statement__c</fullName>
        <label>Invoice Statement</label>
        <referenceTo>Invoice_Statement__c</referenceTo>
        <relationshipLabel>Line Itemss</relationshipLabel>
        <relationshipName>Line_Itemss</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Merchandise__c</fullName>
        <label>Merchandise</label>
        <referenceTo>Merchandise__c</referenceTo>
        <relationshipLabel>Line Itemss</relationshipLabel>
        <relationshipName>Line_Itemss</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <formula>Price__c  *  Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Line Item</label>
    <nameField>
        <label>Line Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Line Itemss</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SOrder_in_stock</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
ISNEW(),
   Merchandise__r.Inventory__c &lt;  Units__c ,
   IF (
     Units__c &lt; PRIORVALUE(Units__c),
     FALSE,
     Merchandise__r.Inventory__c &lt; (Units__c - PRIORVALUE(Units__c))
   )
)</errorConditionFormula>
        <errorDisplayField>Units__c</errorDisplayField>
        <errorMessage>No way boss</errorMessage>
    </validationRules>
</CustomObject>